[package]
name = "ethereal"
version = "0.1.0"
edition = "2021"

[dependencies]
kanal = "0.1.0-pre8"
serde = { version = "1.0.197", features = ["derive"] }
serde_eetf = "0.2.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "io-std", "net", "rt-multi-thread", "rt", "io-util", "sync"] }
